# UNIX

./: CMakeLists.txt  Makefile  main.c
build-in_functions/: cd.c  chmod.c  du.c  echo.c  env.c  exit.c  export.c  export_utils.c  ls.c  ps.c  pwd.c  unset.c  wc.c
envp/: env_finder.c  env_update.c  put_vars.c  reallocate_envp.c
execution/pipe_commands/: fd_helper.c  pipe_commands.c  pipe_exec.c
execution/single_command/: exec.c  exec_build_in.c  exec_utils.c  make_file_fd.c
exit_error_functions/: error_funcs.c  exit_dup.c  exit_malloc.c
includes/: all_structer.h  build_in_functions.h  exec.h  exit.h  minishell.h  pars.h  signal_minishell.h
libft/: size_of_2d_array.c
parser/: delete_quotes.c  get_args.c  open_redirection.c  parser_utils.c  put_error.c  shell_counter.c  shell_parser.c  tokenizator.c  tokenizator_utils.c  update_split.c
parser/check_valid_line/: check_quotes.c  check_reds.c
read/: minishell_read.c  minishell_read_utils.c
signal/: signal_main.c
